# ai-workstation

./: .gitignore  CHANGELOG.md  DOCTOR.md  INSTALL.md  QUICKSTART.md  README.md  STRUCTURE_AUDIT.md  compose.yaml
Agents/ORBIT/: agent.yaml  principles.md  system.md  tasks.md
Configs/: registry.yaml
Docs/: Constitution.md  Manifesto.md
Python/Servers/orbit-knowledge/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CHUNKING_STRATEGY.md  EMBEDDING_PIPELINE.md  QUALITY_REPORT.md  README.md  pyproject.toml
Python/Servers/orbit-knowledge/docs/: API.md  Architecture.md  CLI.md  Performance.md
Python/Servers/orbit-knowledge/evaluation/: README.md  benchmark.py  evaluator.py  runner.py
Python/Servers/orbit-knowledge/evaluation/reports/: apple_silicon.md  contracts.md  hallucinations.md  summary.md
Python/Servers/orbit-knowledge/reports/: doctor_report.md
Python/Servers/orbit-knowledge/tests/: __init__.py  benchmark.py  test_knowledge.py
Scripts/: bootstrap.ps1  bootstrap.sh  dev.sh  install.sh
Services/open-webui/: webui.db-shm  webui.db-wal
Services/open-webui/uploads/: 4974f31f-7f78-4c3b-bf4d-4c2270a2e1d4_README.md
examples/: repository_summary.py  review_changes.py  search_project.py
orbit-core/: .coverage  README.md  pyproject.toml
orbit-core/docs/: API.md  Architecture.md  DependencyGraph.md  Examples.md
orbit-core/src/orbit_core/: __init__.py
orbit-core/src/orbit_core/capabilities/: __init__.py  capability.py  plugin.py
orbit-core/src/orbit_core/config/: __init__.py  manager.py
orbit-core/src/orbit_core/events/: __init__.py  bus.py  types.py
orbit-core/src/orbit_core/exceptions/: __init__.py  errors.py
orbit-core/src/orbit_core/health/: __init__.py  checker.py
orbit-core/src/orbit_core/interfaces/: __init__.py  config.py  engine.py  health.py  lifecycle.py  logging.py  metrics.py  providers.py  registry.py
orbit-core/src/orbit_core/logging/: __init__.py  logger.py
orbit-core/src/orbit_core/providers/: __init__.py  container.py
orbit-core/src/orbit_core/registry/: __init__.py  registry.py
orbit-core/src/orbit_core/types/: __init__.py  models.py
orbit-core/src/orbit_core/utils/: __init__.py  hashing.py  lazy.py  paths.py  retry.py  timing.py  validation.py
orbit-core/src/orbit_core/version/: __init__.py  info.py
orbit-core/tests/: test_capabilities.py  test_config.py  test_container.py  test_events.py  test_exceptions.py  test_health.py  test_interfaces.py  test_logging.py  test_registry.py  test_types.py  test_utils.py  test_version.py
orbit-core/tests/benchmarks/: bench_events.py  bench_registry.py
orbit-execution/: CHANGELOG.md  QUALITY_REPORT.md  README.md  pyproject.toml
orbit-execution/docs/: ADR.md  Architecture.md  ClassDiagram.md  ComponentDiagram.md  Lifecycle.md  PublicAPI.md  PublicConcepts.md  Sequence.md
orbit-execution/src/orbit_execution/: __init__.py  engine.py  events.py  exceptions.py  interfaces.py  observability.py  policies.py  sandbox.py  types.py
orbit-execution/src/orbit_execution/providers/: local.py
orbit-execution/tests/: test_execution.py  test_observability.py  test_policies.py  test_sandbox.py  test_streaming.py
orbit-execution/tests/benchmarks/: bench_execution.py  bench_observability.py  bench_policies.py  bench_sandbox.py  bench_streaming.py
orbit-git/: CHANGELOG.md  QUALITY_REPORT.md  README.md  pyproject.toml
orbit-git/docs/: ADR.md  Architecture.md  ComponentDiagram.md  PublicAPI.md  Sequence.md
orbit-git/src/orbit_git/: __init__.py  engine.py  events.py  exceptions.py  integration.py  managers.py  models.py  parser.py  providers.py  runner.py  validator.py
orbit-git/tests/: test_git_integration.py  test_git_sprint1.py  test_git_sprint2.py  test_git_sprint3.py  test_git_sprint4.py
orbit-git/tests/benchmarks/: bench_git_integration.py  bench_git_sprint1.py  bench_git_sprint2.py  bench_git_sprint3.py  bench_git_sprint4.py
orbit-knowledge/: QUALITY_REPORT.md  README.md  pyproject.toml
orbit-knowledge/docs/: ADR.md  ComponentDiagram.md  DATABASE_SCHEMA.md  FAQ.md  FINAL_AUDIT.md  INDEXER_ARCHITECTURE.md  Installation.md  ROADMAP.md  Sequence.md  Troubleshooting.md
orbit-knowledge/evaluation/: __init__.py  benchmark.py  evaluator.py  generate_questions.py  metrics.py  questions.yaml  runner.py
orbit-knowledge/evaluation/reports/: benchmark.md  performance.md  retrieval.md  tools.md
orbit-knowledge/src/orbit_knowledge/: cli.py  config.py  doctor.py  logging_config.py  models.py  server.py
orbit-knowledge/src/orbit_knowledge/cache/: lru.py
orbit-knowledge/src/orbit_knowledge/fingerprints/: __init__.py  simhash.py
orbit-knowledge/src/orbit_knowledge/graph/: __init__.py  engine.py
orbit-knowledge/src/orbit_knowledge/indexing/: __init__.py  builder.py  chunker.py  chunking.py  embeddings.py  engine.py  events.py  hashes.py  hashing.py  metadata.py  queue.py  scheduler.py  storage.py  watcher.py
orbit-knowledge/src/orbit_knowledge/mcp/: prompts.py  resources.py  tools.py
orbit-knowledge/src/orbit_knowledge/planner/: __init__.py  query_planner.py
orbit-knowledge/src/orbit_knowledge/providers/: filesystem.py  markdown.py
orbit-knowledge/src/orbit_knowledge/ranking/: __init__.py  engine.py
orbit-knowledge/src/orbit_knowledge/search/: __init__.py  content.py  filename.py  ranking.py  semantic.py
orbit-knowledge/src/orbit_knowledge/services/: knowledge_service.py  project_service.py  summary_service.py
orbit-knowledge/src/orbit_knowledge/tagging/: __init__.py  tagger.py
orbit-knowledge/tests/: benchmark.py  test_knowledge.py
orbit-skills/: CHANGELOG.md  QUALITY_REPORT.md  README.md  demo_repository_summary.py  pyproject.toml
orbit-skills/docs/: ADR.md  Architecture.md  ComponentDiagram.md  PublicAPI.md  Sequence.md
orbit-skills/src/orbit_skills/: __init__.py  bootstrap.py  context.py  events.py  executor.py  llm.py  models.py  registry.py
orbit-skills/src/orbit_skills/skills/: __init__.py  explain_commit.py  repository_summary.py  review_changes.py  search_project.py
orbit-skills/tests/: test_e2e.py
(+1 files in other folders)
