[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit-core"
version = "0.1.0"
description = "ORBIT Platform Core — Shared contracts, types, and infrastructure"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ORBIT Authors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4", "mypy>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
line-ending = "lf"
