[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit-execution"
version = "1.0.0"
description = "ORBIT Execution Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "orbit-core @ file:///Users/santi/AI/ai-workstation/orbit-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_execution"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
line-ending = "lf"
