[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit-git"
version = "0.1.0"
description = "ORBIT Git Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "orbit-core @ file:///Users/santi/AI/ai-workstation/orbit-core",
    "orbit-execution @ file:///Users/santi/AI/ai-workstation/orbit-execution",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_git"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "orbit_execution.*"
ignore_missing_imports = true

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
line-ending = "lf"
