[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbit-knowledge"
version = "3.0.0"
description = "ORBIT Knowledge Engine and Semantic Indexer MCP Server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "ORBIT Authors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "fastmcp>=0.4.1",
    "mcp>=0.1.0",
    "pyyaml>=6.0.1",
    "starlette>=0.37.2",
]

[project.scripts]
orbit-knowledge = "knowledge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["knowledge"]
